--- a/test/dune
+++ b/test/dune
@@ -1,3 +1,3 @@
 (executable
  (name one_to_one_test)
- (libraries httpaf one_to_one_lib ounit2 lwt lwt.unix))
+ (libraries base ounit2 one_to_one_lib lwt lwt.unix httpaf httpaf-lwt-unix))
