--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM ocaml/opam2:ubuntu
 COPY . /one-to-one
-RUN cd /one-to-one && ./docker/linux-one-to-one-bootstrap.sh
+RUN cd /one-to-one && ./docker/linux-bootstrap.sh
 WORKDIR /one-to-one
